--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "moment": "^2.24.0",
+    "persianjs": "^0.4.0",
     "querystring": "^0.2.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
