--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "2.1.8",
     "react-toastify": "^4.5.2",
     "redux": "^4.0.1",
+    "redux-form": "^8.2.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
