--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "persianjs": "^0.4.0",
     "querystring": "^0.2.0",
